<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_registration"
                    android:textColor="@color/Black"
                    android:textSize="25sp" />


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textEmailReg"
                    android:layout_marginTop="30dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_email"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_password"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/email_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="300dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/register"
                    android:textStyle="bold" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />

</RelativeLayout>