...
    <string name="password">Password</string>
    <string name="pill_logo">pill Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="name_settings">Name</string>
...
